--- a/pbl_GP9/mychat/templates/recom.html
+++ b/pbl_GP9/mychat/templates/recom.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+<!--新着投稿を掲示するテンプレート-->>
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>おすすめ</title>
+    <title>新着投稿</title>
 </head>
 <body>
-    <h1>おすすめ</h1>
+    <h1>新着</h1>
     <p><a href="{% url 'mychat:result' %}?from=recom">投稿</a></p>
 
     <p><a href="{% url 'mychat:main' %}">戻る</a></p>
