--- a/pbl_GP9/mychat/templates/main.html
+++ b/pbl_GP9/mychat/templates/main.html
@@ -9,7 +9,7 @@
     <h1>ホーム</h1>
     <p><a href="{% url 'mychat:search' %}">検索</a></p>
     <p><a href="{% url 'mychat:write' %}">投稿</a></p>
-    <p><a href="{% url 'mychat:recom' %}">おすすめ</a></p>
+    <p><a href="{% url 'mychat:recom' %}">新着</a></p>
     <p><a href="{% url 'mychat:map' %}">マップ</a></p>
     <p><a href="{% url 'mychat:list' %}">投稿一覧</a></p>
 
