--- a/pbl_GP9/mychat/templates/search.html
+++ b/pbl_GP9/mychat/templates/search.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--検索結果を表示するテンプレート-->
 <html>
 <head>
     <meta charset="UTF-8">
@@ -6,7 +7,23 @@
 </head>
 <body>
     <h1>検索結果</h1>
-    <p><a href="{% url 'mychat:result' %}?from=search">投稿</a></p>
+
+    {% if posts %}
+        {% for post in posts %}
+            <div>
+                <h3>{{ post.shop_name }}</h3>
+                <p>ジャンル：{{ post.genre }}</p>
+                <p>場所：{{ post.location }}</p>
+
+                {% if post.photo %}
+                    <img src="{{ post.photo.url }}" width="200">
+                {% endif %}
+            </div>
+            <hr>
+        {% endfor %}
+    {% else %}
+        <p style="color: red;">該当する投稿がありません。</p>
+    {% endif %}
 
     <p><a href="{% url 'mychat:main' %}">戻る</a></p>
 </body>
